# Microprocesssor_Project

./: CMakeLists.txt  README.md  sdkconfig.old
component/camera/: CMakeLists.txt
component/face_recognition/: CMakeLists.txt  component.mk
component/oled_display/: CMakeLists.txt  component.mk  ssd1306.c  ssd1306.h
component/sd_card/: CMakeLists.txt
component/webserver/: CMakeLists.txt
main/: main.c
